--- a/package.json
+++ b/package.json
@@ -1,21 +1,43 @@
 {
-  "name": "wxcloudrun-express",
+  "private": true,
+  "name": "my-app",
   "version": "1.0.0",
-  "description": "微信云托管 express 框架模版",
-  "main": "index.js",
+  "description": "npm init template for bootstrapping an empty Colyseus project",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
+    "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
+    "clean": "node node_modules/rimraf/bin lib",
+    "schema-codegen": "schema-codegen src/rooms/schema/RoomState.ts --ts --output ../assets/Cocos-MMO/Scripts/States/",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.3.2",
-    "sequelize": "^6.8.0"
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/colyseus/create-colyseus/issues"
   },
-  "engines": {
-    "node": ">=12.0.0"
+  "homepage": "https://github.com/colyseus/create-colyseus#readme",
+  "devDependencies": {
+    "@colyseus/loadtest": "^0.14.3",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.1",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^2.7.1",
+    "ts-node": "^8.1.0",
+    "ts-node-dev": "^1.0.0-pre.63",
+    "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "@colyseus/arena": "^0.14.9",
+    "@colyseus/monitor": "^0.14.0",
+    "@colyseus/social": "^0.10.9",
+    "@mikro-orm/core": "^4.5.5",
+    "@mikro-orm/mongodb": "^4.5.5",
+    "colyseus": "^0.14.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.16.4",
+    "winston": "^3.3.3"
   }
 }
